# DCO

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  app_settings.schema.json  app_settings.schema.yaml  new.json  old.json  pyproject.toml  setup.cfg
dco/.github/workflows/: build-and-test.yml  ci.yml  docs.yml
docs/: __init__.py  app_settings.md
examples/simple_app/: app.py  test_integration.py
examples/simple_app/config/: config.development.yaml  config.yaml
scripts/: dev_run.sh  generate_docs.sh
src/dco/: __init__.py  cli.py  core.py  secrets.py  utils.py  watcher.py
tests/: conftest.py  test_core.py  test_lenient_yaml.py  test_merge.py  test_scaffold.py  test_schema_diff.py  test_secrets.py  test_secrets_quick.py  test_validate_file.py  test_validate_merged.py
