[metadata]
name = dco
version = 0.0.1
description = Dynamic Config Orchestrator
author = Safwan
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    pydantic>=1.10
    python-dotenv>=0.21
    PyYAML>=6.0
    watchdog>=3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dco = dco.cli:main
