[metadata]
name = dco
description = Dynamic Config Orchestrator
long_description = file: README.md
long_description_content_type = text/markdown
author = safwan bakkar
author_email = safwanbakkar.dev@hotmail.com
license = MIT
url = https://github.com/safvan041/DCO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=1.10
    python-dotenv>=0.21
    PyYAML>=6.0
    watchdog>=3.0

[options.extras_require]
aws =
    boto3>=1.26
vault =
    hvac>=1.0
dev =
    pytest>=7.0
    ruff
    black
    isort
    pre-commit
    jsonschema
    setuptools_scm

[options.packages.find]
where = src

[tool.setuptools.package-data]
# include any data files (none required, but keep pattern)
dco =

[tool.setuptools_scm]
write_to = src/dco/_version.py
